# leptos_todo_app

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  fly.toml  index.html  nginx.conf
public/: output.css
src/: components.rs  main.rs  models.rs
style/: input.css
